[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/thumbnails/thumbnail.jpg" type="Texture" id=1]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/themes/font_small.tres" type="Theme" id=3]
[ext_resource path="res://scenes/gui/level_select/level_card.gd" type="Script" id=4]
[ext_resource path="res://addons/utils/button_highlighter.gd" type="Script" id=5]

[node name="LevelCard" type="MarginContainer"]
margin_right = 220.0
margin_bottom = 250.0
rect_min_size = Vector2( 220, 250 )
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ButtonLevel" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 230.0

[node name="ButtonHighlighter" type="Node" parent="ButtonLevel"]
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 230.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 190.0
mouse_filter = 2

[node name="TextureRectThumbnail" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="LabelLevelName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 140.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme = ExtResource( 3 )
text = "Level"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="ButtonLevel" to="." method="_on_ButtonLevel_pressed"]
